# android-pitch-example

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/houvven/pitch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/houvven/pitch/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/houvven/pitch/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pitch/: build.gradle.kts
pitch/src/androidTest/java/com/houvven/pitch/: ExampleInstrumentedTest.kt
pitch/src/main/cpp/: CMakeLists.txt  pitch.cpp  pitch_detector.cpp  pitch_detector.h  pyin.cpp  pyin.h
pitch/src/main/java/com/houvven/pitch/: PitchDetectionNative.kt
